# parse_json_and_create_pdf

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.json
pkg/barcode/: encoder.py  parser.py
static/: barcode.css  styles.css
templates/: barcode.html  barcode_parser.html
tests/pkg/: test_encoder.py  test_parser.py
